# bieye

./: .gitignore  Cargo.toml  NOTES.md  README.md  TODO.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: release_github.yml  rust.yml
debian/: README.md  control
dev/: NOTES.md  dead_code.rs
dev/algo_work/: README.md  bionic_reader_3.py
dev/debian/: README.md  build_and_publish.sh  changelog  copyright  files  rules
dev/text_samples/: logs.txt  man_page.txt  story_short.txt
dev_stuff/: NOTES.md  bionic_reader_2.py  bionic_reader_4.py  bionic_reader_5.py  bionic_reader_6_this.py  dead_code.rs
dev_stuff/algo_work/: bionic_reader.py  bionic_reader_6_this.py
dev_stuff/text_samples/: numbers.txt  story_long.txt
snap/: snapcraft.yaml
snap/local/: README.md
src/: args.rs  bieye.rs  bioreader.rs  cli_args.rs  main-simple.rs  main.rs  terminal.rs
tests/: README.md  test_bieye.rs  test_cli.rs  test_cli_args.rs
