[package]
authors = ["Ismet Handzic"]
edition = "2021"
name = "bieye"
readme = "README.md"
version = "0.2.3"
description = "A bionic reader for blazingly fast reading within a terminal console"
keywords = ["bionic", "reader", "terminal", "cli", "parsing"]
categories = ["terminal", "console", "cli", "tool", "parsing"]
license = "GPL-3.0-or-later"
repository = "https://github.com/ismet55555/bieye"
documentation = "https://github.com/ismet55555/bieye"
homepage = "https://github.com/ismet55555/bieye"

[dependencies]
clap = { version = "4.3", features = ["derive"] } # cli tool building
color-eyre = "0.6"  # better error messages
colored = "2.0"  # colored string output
crossterm = "0.27"
env_logger = "0.10"  # logging to stdout, needed by log
log = "0.4"  # message logging
rayon = "1.7" # parallelization
regex = "1.9"  # regex operations

[dev-dependencies]
assert_cmd = "2.0"  # testing cli tools
predicates = "3.0"  # testing cli tools
